--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "material-design-icons": "^3.0.1",
-    "vue": "^3.2.16"
+    "vue": "^3.2.16",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.9.3",
